--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,6 +14,7 @@
       {{!-- todo hacer ejemplo de nav con partials --}}
       <a href="/">Home</a>
       <a href="/book">Lista de Libros</a>
+      <a href="/book/create">Agregar Libro</a>
 
       {{{body}}}
 
