--- a/views/book/details.hbs
+++ b/views/book/details.hbs
@@ -9,4 +9,8 @@
     <p>Autor: {{bookDetails.author}}</p>
   </div>
 
+  <a href="/book/{{bookDetails._id}}/edit">
+    <button>Ir a Actualizar</button>
+  </a>
+
 </div>
