--- a/views/book/create-form.hbs
+++ b/views/book/create-form.hbs
@@ -2,7 +2,7 @@
 
   <h3>Formulario para crear libro</h3>
 
-  <form action="/book/create-new-book" method="post">
+  <form action="/book/create" method="post">
 
     <label for="title">Titulo</label>
     <input type="text" name="title">
