--- a/views/book/details.hbs
+++ b/views/book/details.hbs
@@ -12,5 +12,9 @@
   <a href="/book/{{bookDetails._id}}/edit">
     <button>Ir a Actualizar</button>
   </a>
+  
+  <form action="/book/{{bookDetails._id}}/delete" method="post">
+    <button>Borrar</button>
+  </form>
 
 </div>
