--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,6 +15,8 @@
       <a href="/">Home</a>
       <a href="/book">Lista de Libros</a>
       <a href="/book/create">Agregar Libro</a>
+      <a href="/author">Lista de Autores</a>
+      <a href="/author/create">Agregar Autor</a>
 
       {{{body}}}
 
