--- a/views/book/create-form.hbs
+++ b/views/book/create-form.hbs
@@ -21,7 +21,7 @@
     </select> --}}
 
     <label for="author">Autor</label>
-    <select name="author">
+    <select name="author" multiple="true">
 
       {{#each allAuthors}}
 
