--- a/views/book/details.hbs
+++ b/views/book/details.hbs
@@ -15,6 +15,12 @@
 
     {{/each}}
 
+    {{#if bookDetails.image}}
+
+      <img src="{{bookDetails.image}}" alt="cover" width="300px">
+
+    {{/if }}
+
 
   </div>
 
