--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,28 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>{{appTitle}}</title>
-      <link rel="stylesheet" href="/stylesheets/style.css" />
-   </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>{{appTitle}}</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="/stylesheets/style.css" />
+</head>
 
-   <body>
+<body>
 
-      {{!-- todo hacer ejemplo de nav con partials --}}
-      <a href="/">Home</a>
-      <br>
-      <a href="/book">Lista de Libros</a>
-      <a href="/book/create">Agregar Libro</a>
-      <br>
-      <a href="/author">Lista de Autores</a>
-      <a href="/author/create">Agregar Autor</a>
+  {{!-- todo hacer ejemplo de nav con partials --}}
+  <nav class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link" href="/">Home</a>
+    </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-expanded="false">Books</a>
+      <ul class="dropdown-menu">
+        <li>
+          <a class="dropdown-item" href="/book">Lista de Libros</a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="/book/create">Agregar Libro</a>
+        </li>
+      </ul>
+    </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-expanded="false">Author</a>
+      <ul class="dropdown-menu">
+        <li>
+          <a class="dropdown-item" href="/author">Lista de Autores</a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="/author/create">Agregar Autor</a>
+        </li>
+      </ul>
+    </li>
 
-      {{{body}}}
+  </nav>
 
-      <script src="/js/script.js"></script>
-   </body>
+  <div class="d-flex justify-content-center mt-5">
+    {{{body}}}
+  </div>
+
+  <script src="/js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+  {{!--
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+    integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+    crossorigin="anonymous"></script> --}}
+</body>
 
 </html>
