--- a/views/book/edit-form.hbs
+++ b/views/book/edit-form.hbs
@@ -12,9 +12,26 @@
     <label for="description">Descripción</label>
     <input type="text" name="description" value="{{bookToUpdate.description}}">
     <br>
-    <label for="author">Autor</label>
-    <input type="text" name="author" value="{{bookToUpdate.author}}">
+    {{!-- <label for="author">Autor</label>
+    <input type="text" name="author" value="{{bookToUpdate.author}}"> --}}
+    
+    <select name="author" multiple="true">
+
+      {{#each allAuthors}}
+
+        {{#if this.isOnBook}}
+          <option value="{{this._id}}" selected="true">{{this.name}}</option>
+        {{else}}
+          <option value="{{this._id}}">{{this.name}}</option>
+        {{/if}}
+
+
+      {{/each}}
+
+    </select>
+
     <br>
+
     <button>Actualizar</button>
 
   </form>
